<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/svRoot"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbarStyle="outsideOverlay"
tools:context=".ActMain">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingTop="50dp"
    android:paddingEnd="12dp"
    android:paddingBottom="6dp">
    <!-- paddingTopが大きいのは、撮影ボタンのデフォルト位置に被らないようにするため -->

    <View style="@style/setting_border" />

    <TextView
        style="@style/setting_caption"
        android:text="@string/capture_button_still" />

    <LinearLayout
        style="@style/setting_item"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStartStopStill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnResetPositionStill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/reset_position"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <View style="@style/setting_border" />

    <TextView
        style="@style/setting_caption"
        android:text="@string/capture_button_video" />

    <LinearLayout
        style="@style/setting_item"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStartStopVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnResetPositionVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/reset_position"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        style="@style/setting_item"
        android:text="@string/overlay_button_desc"
        android:textColor="#000"
        android:textSize="12sp" />

    <View style="@style/setting_border" />

    <TextView
        style="@style/setting_caption"
        android:labelFor="@+id/etButtonSize"
        android:text="@string/overlay_button_size" />

    <EditText
        android:id="@+id/etButtonSize"
        style="@style/setting_item"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvButtonSizeError"
        style="@style/setting_item"
        android:text="@string/button_size_error"
        android:textColor="#c00" />

    <View style="@style/setting_border" />

    <TextView
        style="@style/setting_caption"
        android:text="@string/save_folder" />

    <LinearLayout
        style="@style/setting_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSaveFolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000" />

        <ImageButton
            android:id="@+id/btnSaveFolder"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/edit"
            android:elevation="3dp"
            android:src="@drawable/ic_edit" />

    </LinearLayout>


    <View style="@style/setting_border" />

    <TextView
        style="@style/setting_caption"
        android:text="@string/still_settings" />


    <Switch
        android:id="@+id/swSavePng"
        style="@style/setting_item"
        android:minHeight="48dp"
        android:text="@string/save_png" />

    <Switch
        android:id="@+id/swShowPostView"
        style="@style/setting_item"
        android:minHeight="48dp"
        android:text="@string/show_post_view_after_capture" />

    <View style="@style/setting_border" />

</LinearLayout>
</ScrollView>